src/tests/PropInInitialState/invalid/case#10/index.jsx
import React, { useState } from 'react';

const MeuComponente = (props) => {
    const [prop1, setProp1] = useState(props.prop1);
    const [prop2, setProp2] = useState(props.prop2);

    // Restante do código...
};